<resources>
    <string name="app_name">Music Streamer</string>
    <string name="online_offline">Offline mode:</string>
    <string name="logo">logo</string>
    <string name="start">START</string>
    <string name="no_internet_conn">No internet connection.</string>
    <string name="retry">retry</string>
    <string name="artist">Search</string>
    <string name="runasynctask">Go</string>
    <string name="hint1"><i>Artists, songs, or podcasts</i></string>
    <string name="hint2"><i>Type your artist...</i></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ip_hint">Server\'s IP</string>
    <string name="setup_the_connection">setup the connection</string>
</resources>
