<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/online_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="15dp"
        android:text="@string/online_offline"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#f4f4f4"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toStartOf="@+id/onOff_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Switch
        android:id="@+id/onOff_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:theme="@style/SCBSwitch"
        app:layout_constraintBaseline_toBaselineOf="@+id/online_offline"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toEndOf="@+id/online_offline" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="89dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ms2"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="175dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/retry"
        android:layout_width="65dp"
        android:layout_height="34dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/retry_button"
        android:text="@string/retry"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noInternet" />

    <TextView
        android:id="@+id/noInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="48dp"
        android:text="@string/no_internet_conn"
        android:textColor="#f4f4f4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/retry"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>